-------------------------- aqp 0.99-9.4 (2012-01-12) --------------------------
* profileApply() now provides access to all aspects of the SoilProfileCollection object
  - that means that:
    profileApply(SPC, function(x) ... ) 
    operates on x, which is a soilProfileCollection containing only profile_i
  !!! note that this may break functionality based on aqp 0.99-9.3

-------------------------- aqp 0.99-9.4 (2012-01-09) --------------------------
* 'site(SCP) <- d' now tries to merge data from SPC@site with 'd' via left join
  - this means that all new SPC objects will have a single column of @site data, containin profile IDs
* plot-SoilProfileCollection now tries to guess the best orientation of IDs
  - override with id.style='top' or id.style='side'
* slice-SoilProfileCollection now accepts '.' to define all columns should be returned at requested slices
  - slice(SPC, 1:50 ~ . )   # this means all vars. ID, top, bottom are automatically removed

-------------------------- aqp 0.99-9.1 (2011-12-27) --------------------------
* pedonPC, NASIS, and SDA functions moved *out* of aqp, and *into* new package: soilDB
  - removed assocated, suggested packages from aqp
  - soilDB will be on CRAN shortly
* new argument to plot(SoilProfileCollection, ..., divide.hz=TRUE|FALSE) tha can optionally suppress 
  plotting of dividing lines between horizons (suggested by Ludwig Hilger)
* new function profileApply() for applying functions by profile

-------------------------- aqp 0.99-9 (2011-12-22) --------------------------
* almost ready for AQP 1.0, vignettes are the last missing piece :)
* slice(SPC, ...) is now 10-100x faster, scales linearly
* slice(SPC, ...) can simultaniously slice categorical and continuous variables
* converted ID column in sample data to character class
* fixed a bug in slice() where NA would be returned when IDs were factors
* added test to depths()<- such that factor IDs are converted into character IDs and a warning is issued